# stkfmm_play

./: CMakeLists.txt  README.md
include/: parameters.hpp  particle.hpp
src/: main.cpp  particle.cpp
